--- a/examples/single_on.yml
+++ b/examples/single_on.yml
@@ -22,7 +22,7 @@ ObservingBlocks:
   # Each OB is identified by a label which will also appear in P2
   HD142527:
     description: HD142527 binary in single-field  # a short description of what this OB is
-    mode: single_on                               # can be dual-on, dual-off, single-on, or single-off
+    mode: single_on                               # can be dual_wide_on, dual_wide_off, dual_on, dual_off, single_on, or single_off
     target: HD142527                              # this target name will be resolved in simbad to populate various fields
     objects:
     # objects is a list fiber pointings and exposure settings. In single-on, there should be only one
