--- a/examples/dual_on.yml
+++ b/examples/dual_on.yml
@@ -27,7 +27,7 @@ ObservingBlocks:
   # Each OB is identified by a label which will also appear in P2
   HD206893_search:
     description: Searching for planet c           # a short description of what this OB is
-    mode: dual_on                                 # can be dual-on, dual-off, single-on, or single-off
+    mode: dual_on                                 # can be dual_wide_on, dual_wide_off, dual_on, dual_off, single_on, or single_off
     target: HD206893                              # this target name will be resolved in simbad to populate various fields
     # objects is a list fiber pointings and exposure settings which will be used in the sequence
     objects:
@@ -37,7 +37,7 @@ ObservingBlocks:
         DET2.NDIT.OBJECT: 32   # Number of DITs on the object (4..320)
         DET2.NDIT.SKY: 32      # Number of DITs on sky (4..320)
         coord_syst: pasep      # coord system for fiber pointing. Can be radec, pasep, or whereistheplanet
-        coord: [0, 0]          # coordinates relative to FT target in above system. Units are mas or deg.
+        coord: [0, 0]          # coordinates relative to FT target in above system. Units are mas or deg. Or a name if whereistheplanet is used
       c1:
         name: c_option_1       # in this example, first option explored for location of planet c
         DET2.DIT: 30
