fixing mag bug in acquisition, and allowing OB params to overide setup params in acqTpl

--- a/examples/dual_off_calib.yml
+++ b/examples/dual_off_calib.yml
@@ -78,6 +78,8 @@ ObservingBlocks:
     # last is the central star to calibrate amplitude
     description: HD8799 star in single-field
     mode: single_on
+    # single-field cannot be taken in astrometric, so we need to override the ISS.VLTITYPE for this OB
+    ISS.VLTITYPE: ["snapshot"]  
     target: HR8799
     objects:
       star:
