--- a/examples/single_on.yml
+++ b/examples/single_on.yml
@@ -13,7 +13,7 @@ setup:
   INS.SPEC.RES: "HIGH"         # spectral resolution. LOW, MED, or HIGH
   INS.SPEC.POL: "OUT"          # Polarisation. OUT or IN
   ISS.BASELINE: ["large"]      # baselines (small, large, or UTs)
-  ISS.VLTITYPE: ["astrometry"] # snapshot, imaging, time-series, or astrometry
+  ISS.VLTITYPE: ["snapshot"]   # snapshot, imaging, time-series
   concatenation: none          # if not none, a concatenation with this name will be created and all OBs put in here
   constraints:                 # additional constraints
     skyTransparency: "Variable, thin cirrus" 
@@ -24,6 +24,7 @@ ObservingBlocks:
     description: HD142527 binary in single-field  # a short description of what this OB is
     mode: single_on                               # can be dual_wide_on, dual_wide_off, dual_on, dual_off, single_on, or single_off
     target: HD142527                              # this target name will be resolved in simbad to populate various fields
+    ISS.VLTITYPE: ["snapshot"] # snapshot, imaging, time-series, or astrometry	         
     objects:
     # objects is a list fiber pointings and exposure settings. In single-on, there should be only one
       s:                              # arbitrary label of your choice
