--- a/examples/dual_wide_off.yml
+++ b/examples/dual_wide_off.yml
@@ -19,6 +19,9 @@ setup:
   concatenation: none          # if not none, a concatenation with this name will be created and all OBs put in here
   constraints:                 # additional constraints
     skyTransparency: "Variable, thin cirrus" 
+    airmass: 1.6
+    moonDistance: 10
+    atm: 85%
 
 
 
