--- a/examples/dual_on.yml
+++ b/examples/dual_on.yml
@@ -17,8 +17,9 @@ setup:
   concatenation: none          # if not none, a concatenation with this name will be created and all OBs put in here
   constraints:                 # additional constraints
     skyTransparency: "Variable, thin cirrus" 
-
-
+    airmass: 1.6
+    moonDistance: 10
+    atm: 85%
 
 # This section described the OBs, each made of a succession of template
 # Multiple OBs can de defined in a file, but will share the same above setup.
