--- a/examples/single_on.yml
+++ b/examples/single_on.yml
@@ -17,6 +17,9 @@ setup:
   concatenation: none          # if not none, a concatenation with this name will be created and all OBs put in here
   constraints:                 # additional constraints
     skyTransparency: "Variable, thin cirrus" 
+    airmass: 1.6
+    moonDistance: 10
+    atm: 85%
 
 ObservingBlocks:
   # Each OB is identified by a label which will also appear in P2
