add background image and acq_only option

--- a/examples/dual_on.yml
+++ b/examples/dual_on.yml
@@ -33,7 +33,7 @@ ObservingBlocks:
     # objects is a list fiber pointings and exposure settings which will be used in the sequence
     objects:
       s:                       # arbitrary label of you choice. In this example, s is the star
-        name: AB Pic star      # if coord_syst is whereistheplanet, this name is used to resolve the position
+        name: Central star     # if coord_syst is whereistheplanet, this name is used to resolve the position
         DET2.DIT: 1            # integration time (in s). Can be 0.3, 1, 3, 10, 30, 100, 300
         DET2.NDIT.OBJECT: 32   # Number of DITs on the object (4..320)
         DET2.NDIT.SKY: 32      # Number of DITs on sky (4..320)
