--- a/examples/dual_off.yml
+++ b/examples/dual_off.yml
@@ -14,6 +14,7 @@ setup:
   INS.SPEC.POL: "OUT"          # Polarisation. OUT or IN
   ISS.BASELINE: ["UTs"]        # baselines (small, large, or UTs)
   ISS.VLTITYPE: ["astrometry"] # snapshot, imaging, time-series, or astrometry
+  SEQ.MET.MODE: FAINT          # the mode for the metrology laser. Can be FAINT, ON, or OFF    
   concatenation: none          # if not none, a concatenation with this name will be created and all OBs put in here
   constraints:                 # additional constraints
     skyTransparency: "Variable, thin cirrus" 
@@ -30,7 +31,10 @@ ObservingBlocks:
   GJ64:
     description: Swap observation of GJ64         # a short description of what this OB is
     mode: dual_off                                # can be dual_wide_on, dual_wide_off, dual_on, dual_off, single_on, or single_off
-    target: GJ64                                  # this target name will be resolved in simbad to populate various fields. 
+    target: GJ64                                  # this target name will be resolved in simbad to populate various fields.
+#    g_mag: 42.00                                   # if the magnitudes are not available in Simbad, an error will be thrown
+#    h_mag: 42.00                                   # unless you specify them here and uncomment these lines. Note that when specified, 
+#    k_mag: 42.00                                   # these values will always supersede any values retrieved from Simbad    
     coord_syst: radec                             # in dual-off, the coordinates are set at acquisition. coord_syst is radec, pasep, or whereistheplanet
     coord: [425, 685]                             # units are mas and deg. just the target name if coord_syst=whereistheplanetunits are mas and deg. 
     # objects is a list fiber pointings and exposure settings which will be used in the sequence
