--- a/examples/dual_wide_off.yml
+++ b/examples/dual_wide_off.yml
@@ -31,8 +31,11 @@ setup:
 ObservingBlocks:
   # Each OB is identified by a label which will also appear in P2
   theta1Ori:
-    description: Swap observation of GJ64         # a short description of what this OB is
+    description: Swap observation of theta1Ori    # a short description of what this OB is
     mode: dual_wide_off                           # can be dual_wide_on, dual_wide_off, dual_on, dual_off, single_on, or single_off
+#    g_mag: 6.59                                   # if the magnitudes are not available in Simbad, an error will be thrown
+#    h_mag: 5.69                                   # unless you specify them here. Note that when specified, these values will always 
+#    k_mag: 5.60                                   # supersede any values retrieved from Simbad    
     ft_target: theta1 Ori B                       # this target name will be resolved in simbad to populate various fields. 
     sc_target: theta1 Ori C                       # this target name will be resolved in simbad to populate various fields.
     # objects is a list fiber pointings and exposure settings which will be used in the sequence
